--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,10 @@
   ],
   "rules": {
     "react-hooks/rules-of-hooks": "error",
+    "import/no-extraneous-dependencies": "off",
+    "import/prefer-default-export": "off",
     "react-hooks/exhaustive-deps": "warn",
+    "react/prop-types": "off",
     "react/jsx-filename-extension": [
       1,
       {
